fixed the footer alignment and the spaces in the li

--- a/29-grid-portfolio/css/components/footer.css
+++ b/29-grid-portfolio/css/components/footer.css
@@ -3,8 +3,7 @@ body > footer {
   font-size: 0.75rem;
   border-block-start: 1px solid #4d4d4d;
   padding-block-start: 0.75rem;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
 }
 
 body > footer p {
@@ -25,6 +24,7 @@ body > footer a:hover {
 
 body > footer p:last-child {
   font-size: smaller;
+  grid-column: 145;
 }
 
 body > footer p:last-child a {
